crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__question_mark_result_basic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__question_mark_result_basic

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn parse(v0: Int) -> Result[String, Int] =
  let v1: Result[String, Int] = construct Result::Ok#0(v0)
  v1

fn process(v2: Int) -> Result[String, Int] =
  let_join v3(v4: Result[String, Int]) =
    v4
  in
  let_join v12(v5: Int) =
    let v10: Int = mul_int(v5, 2)
    let v11: Result[String, Int] = construct Result::Ok#0(v10)
    v11
  in
  let v6: Result[String, Int] = call parse(v2)
  switch v6 {
    0 (v7: Int) ->
      jump v12(v7)
    1 (v8: String) ->
      let v9: Result[String, Int] = construct Result::Err#1(v8)
      jump v3(v9)
  }

fn main() -> Unit =
  let v13: Result[String, Int] = call process(21)
  switch v13 {
    0 (v14: Int) ->
      let v15: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v16: Unit = call println(v15, v14)
      v16
    1 (v17: String) ->
      let v18: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v19: Unit = call println(v18, v17)
      v19
  }
