crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__question_mark_result_err.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__question_mark_result_err

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn failing() -> Result[String, Int] =
  let v0: Result[String, Int] = construct Result::Err#1("failed")
  v0

fn caller() -> Result[String, Int] =
  let_join v1(v2: Result[String, Int]) =
    v2
  in
  let_join v10(v3: Int) =
    let v8: Int = add_int(v3, 1)
    let v9: Result[String, Int] = construct Result::Ok#0(v8)
    v9
  in
  let v4: Result[String, Int] = call failing()
  switch v4 {
    0 (v5: Int) ->
      jump v10(v5)
    1 (v6: String) ->
      let v7: Result[String, Int] = construct Result::Err#1(v6)
      jump v1(v7)
  }

fn main() -> Unit =
  let v11: Result[String, Int] = call caller()
  switch v11 {
    0 (v12: Int) ->
      let v13: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v14: Unit = call println(v13, v12)
      v14
    1 (v15: String) ->
      let v16: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v17: Unit = call println(v16, v15)
      v17
  }
