crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__stdlib_io_not_found.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__stdlib_io_not_found

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
import core/io/read_file as read_file(String) -> Result[String, String]
declare println: (h) -> Unit
declare read_file: (String) -> Result[String, String]

fn handle(v0: Result[q8, r8]) -> Unit =
  switch v0 {
    0 (v1: e) ->
      let v2: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v3: Unit = call println(v2, "unexpected")
      v3
    1 (v4: d) ->
      let v5: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v6: Unit = call println(v5, "got error")
      v6
  }

fn main() -> Unit =
  let v7: Result[String, String] = call read_file("nonexistent_file_xyz.txt")
  let v8: Unit = call handle(v7)
  v8
