crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__stdlib_io_roundtrip.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__stdlib_io_roundtrip

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/io/read_file as read_file(String) -> Result[String, String]
import core/io/write_file as write_file(String, String) -> Result[String, Unit]
declare println: (g) -> Unit
declare read_file: (String) -> Result[String, String]
declare write_file: (String, String) -> Result[String, Unit]

fn handle(v0: Dict[core/show.Show, p8], v1: Dict[core/show.Show, q8], v2: Result[p8, q8]) -> Unit =
  switch v2 {
    0 (v3: q8) ->
      let v4: Unit = call println(v1, v3)
      v4
    1 (v5: p8) ->
      let v6: Unit = call println(v0, v5)
      v6
  }

fn main() -> Unit =
  let v7: Result[String, Unit] = call write_file("_test_tmp.txt", "hello from file")
  let v10: Result[String, String] = call read_file("_test_tmp.txt")
  let v8: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v9: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v11: Unit = call handle(v8, v9, v10)
  v11
