crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__string_parse.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__string_parse

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/string/parse_int as parse_int(String) -> Option[Int]
import core/string/parse_float as parse_float(String) -> Option[Float]
declare parse_float: (String) -> Option[Float]
declare parse_int: (String) -> Option[Int]
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Option[Int] = call parse_int("42")
  let v1: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v2: Dict[core/show.Show, Option[Int]] = make_dict core/show.Show[Option[Int]](v1)
  let v3: Unit = call println(v2, v0)
  let v4: Option[Int] = call parse_int("abc")
  let v5: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v6: Dict[core/show.Show, Option[Int]] = make_dict core/show.Show[Option[Int]](v5)
  let v7: Unit = call println(v6, v4)
  let v8: Option[Float] = call parse_float("3.14")
  let v9: Dict[core/show.Show, Float] = get_dict core/show.Show[Float]
  let v10: Dict[core/show.Show, Option[Float]] = make_dict core/show.Show[Option[Float]](v9)
  let v11: Unit = call println(v10, v8)
  let v14: Option[Float] = call parse_float("xyz")
  let v12: Dict[core/show.Show, Float] = get_dict core/show.Show[Float]
  let v13: Dict[core/show.Show, Option[Float]] = make_dict core/show.Show[Option[Float]](v12)
  let v15: Unit = call println(v13, v14)
  v15
